Cria integração com Cadeira Livre Empresa API e define clients
