# src/modulos/cadeiralivre/routes/cadeiraLivreRoutes.js
@@ -1,0 +1,24 @@
+import { Router } from "express";
+
+import CadeiraLivreController from "../controller/cadeiraLivreContoller";
+
+const router = Router();
+
+router.get(
+  "/api/cadeiras-livres/disponiveis",
+  CadeiraLivreController.buscarCadeirasLivresDisponiveis
+);
+router.get(
+  "/api/cadeiras-livres/cliente",
+  CadeiraLivreController.buscarCadeirasLivresDoCliente
+);
+router.get(
+  "/api/cadeiras-livres/:cadeiraLivreId",
+  CadeiraLivreController.buscarCadeiraLivrePorId
+);
+router.post(
+  "/api/cadeiras-livres/:cadeiraLivreId/reservar",
+  CadeiraLivreController.reservarCadeiraLivre
+);
+
+export default router;
